// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/shouldRouteEuphrates > when should route 1`] = `
{
  "data": {
    "routerAddr": "0x9e7aDd1De1AB0668D9db4508D4653045f311F173",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteEuphrates > when should route 2`] = `
{
  "data": {
    "routerAddr": "0x9e7aDd1De1AB0668D9db4508D4653045f311F173",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteEuphrates > when should route 3`] = `
{
  "data": {
    "routerAddr": "0xC04Fb8c649DD4Ce87634187E5b2325aCf9C56aBb",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteEuphrates > when should route 4`] = `
{
  "data": {
    "routerAddr": "0xC04Fb8c649DD4Ce87634187E5b2325aCf9C56aBb",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteEuphrates > when should route 5`] = `
{
  "data": {
    "routerAddr": "0x1e76808C973c86a4e89DF7374bB5Ad8C62110009",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteEuphrates > when should route 6`] = `
{
  "data": {
    "routerAddr": "0x1e76808C973c86a4e89DF7374bB5Ad8C62110009",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteEuphrates > when should route 7`] = `
{
  "data": {
    "routerAddr": "0xC934FFE7468Ec5fd49677335771BFa45e71824B8",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteEuphrates > when should route 8`] = `
{
  "data": {
    "routerAddr": "0xC934FFE7468Ec5fd49677335771BFa45e71824B8",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteEuphrates > when should route 9`] = `
{
  "data": {
    "routerAddr": "0xa1d73e877D860f327C0b3394Ed0687D5c6ec86B6",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteEuphrates > when should route 10`] = `
{
  "data": {
    "routerAddr": "0xa1d73e877D860f327C0b3394Ed0687D5c6ec86B6",
    "shouldRoute": true,
  },
}
`;
